2003-05-11  John Levon  <levon@movementarian.org>

	* libpp/profile_container.h:
	* libpp/profile_container.cpp:
	* pp/opreport.cpp:
	* pp/opannotate.cpp:
	* pp/opgprof.cpp: another select_symbols() API cleanup

2003-05-11  John Levon  <levon@movementarian.org>

	* pp/opgprof.cpp: use select_symbols so we can
	handle --threshold

2003-05-11  Philippe Elie  <phil.el@wanadoo.fr>

	* pp/opannotate.cpp: use threshold for source output

2003-05-11  John Levon  <levon@movementarian.org>

	* pp/common_option.h:
	* pp/common_option.cpp:
	* pp/opannotate_options.cpp:
	* pp/opreport_options.cpp: make --threshold
	be a common option.

2003-05-11  John Levon  <levon@movementarian.org>

	* pp/profile_container.h:
	* pp/profile_container.cpp:
	* pp/opannotate.cpp:
	* pp/opreport.cpp: clean up select_symbols
	interface

2003-05-11  John Levon  <levon@movementarian.org>

	* pp/opreport.cpp: make --threshold work for
	image summaries too

2003-05-11  John Levon  <levon@movementarian.org>

	* pp/opreport_options.cpp: fix --threshold
	description to match reality

2003-05-11  John Levon  <levon@movementarian.org>

	* libpp/partition_files.h:
	* libpp/partition_files.cpp:
	* pp/opannotate_options.cpp:
	* pp/opgprof_options.cpp:
	* pp/opreport.cpp:
	* pp/opreport_options.cpp: rename merge_by members

2003-05-11  John Levon  <levon@movementarian.org>

	* pp/opreport.cpp: add some logic to not output
	duplicate lines for dep images when we've already
	shown all the possible details in the main image summary

2003-05-11  John Levon  <levon@movementarian.org>

	* pp/common_option.h: use std::

2003-05-11  Philippe Elie  <phil.el@wanadoo.fr>

	* pp/opreport_options.cpp: move handle_threshold()
	* pp/common_option.h:
	* pp/common_option.cpp: here
	* pp/opannotate_options.h:
	* pp/opannotate_options.cpp:
	* pp/opannotate.cpp: handle --threshold

2003-05-10  John Levon  <levon@movementarian.org>

	* libop/op_mangle.h:
	* libop/op_mangle.c: use a temp struct for